src/test/deca/codegen/invalid/options/floatOverflowConstFloatFloat.deca
// Description :
//    Test de l'option -n
//
// Resultats :
//    !! SI EXECUTION AVEC L'OPTION -n !!
//    L'exécution n'affiche rien

{
    float z = 340282346638528860000000000000000000.0 * 10000000.0;
}